--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 .container{
     width: 100%;
     height: 100vh;
-    background-image: url(...);
+    background-image: url(/images/mars.jpeg);
     background-position: center;
     background-size: cover;
     display: flex;
@@ -30,3 +30,27 @@
 
 }
 
+.carte img{
+    width: 140px;
+    border-radius: 50%;
+}
+.carte h2{
+    font-size: 40px;
+    font-weight: 600;
+    margin-top: 20px;
+}
+.carte p{
+    font-size: 18px;
+    margin: 10px auto;
+    max-width: 330px;
+}
+.carte .reseau img{
+    width: 40px;
+    border-radius: 50%;
+    margin: 10px 5px;
+    transition: background 0.5s;
+}
+
+.carte .reseau img:hover{
+    background:violet;
+}
