--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,5 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    
-}
-
-.container{
-    width: 100%;
-    height: 100vh;
-    background-image: url(/images/mars.jpeg);
-    background-position: center;
-    background-size: cover;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.container {
+    background-image: url("mars.jpeg");
 }
 
 .carte{
@@ -53,4 +39,16 @@
 
 .carte .reseau img:hover{
     background:violet;
+}
+
+.bouton{
+    text-decoration: none;
+    display: inline-block;
+    font-size: 18px;
+    font-weight: 700;
+    background: #fff;
+    color: rgb(209, 63, 197);
+    padding: 10px 30px;
+    border-radius: 30px;
+    margin: 30px 0 10px;
 }
