--- a/css/style-general.css
+++ b/css/style-general.css
@@ -4,6 +4,42 @@
     box-sizing: border-box;
     
 }
+nav{
+    background: #fff;
+    border-radius: 9px;
+    padding: 2px;
+    box-shadow: 0 5px 20px rgba(0,0,0,0.4);
+  }
+  nav ul li{
+    display: inline-block;
+    list-style: none;
+    /* font-size: 2rem; */
+    padding: 0 10px;
+    /* margin: 0 20px; */
+    cursor: pointer;
+    /* position: relative; */
+  }
+  body > div > div > nav > ul {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+  nav ul li:after{
+    content: '';
+    width: 0;
+    height: 3px;
+    background: #2192ff;
+    position: absolute;
+    left: 0;
+    bottom: -10px;
+    transition: 0.5s;
+  }
+  nav ul li:hover::after{
+    width:100%;
+  }
+   
 
 .container{
     width: 100%;
