--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 
 
 .container {
-    background-image: url("mars.jpeg");
+   
+    background-image: url(/Users/Kanza/Desktop/Portfolio/images/mars.jpeg);
 }
 
 .carte{
