--- a/css/pages/CV.css
+++ b/css/pages/CV.css
@@ -1,3 +1,8 @@
+.container {
+   
+    background-image: url(/Users/Kanza/Desktop/Portfolio/images/mars5.jpeg);
+}
+
 .outer{
     height: 100vh;
     width: 100%;
@@ -110,24 +115,9 @@
     background: #fff;
     color: #092c3e;
   }
-  .media-icons{
-    position: absolute;
-    bottom: 16px;
-    right: 15px;
-    margin-top: 12px;
-    justify-content: flex-end;
-  }
-  .media-icons i{
-    display: inline-flex;
-    margin: 0 4px;
-    font-size: 16px;
-    color: #092c3e;
-    opacity: 0.7;
-    cursor: pointer;
-  }
-  .media-icons i:hover{
-    opacity: 1;
-  }
+  
+  
+  
   #switch:checked ~ .outer i{
     color: #fff;
     opacity: 1;
@@ -136,4 +126,3 @@
     display: none;
   }
    
-  Copy Codes
